# OM3D_PROJECT

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  chunk.h  cube_mesh.h  debug_color.h  perlin_noise.h  terrain_generator.h  voxel.h  world.h
include/graphics/: shader.h  texture.h
shaders/: mesh.frg.glsl  mesh.vtx.glsl  water.frg.glsl  water.vtx.glsl
src/: camera.cpp  chunk.cpp  cube_mesh.cpp  debug_color.cpp  main.cpp  perlin_noise.cpp  terrain_generator.cpp  voxel.cpp  world.cpp
src/graphics/: shader.cpp  texture.cpp
